Fixed 'attack function, added ids to each tile, added visibility property to goblins.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: black;
     color: white;
@@ -12,9 +13,7 @@ h1{
 h3{
     font-family: 'Press Start 2P', cursive;
     font-size: 25px;
-
 }
-
 
 p{
     font-family: 'Ubuntu', sans-serif;
@@ -25,6 +24,18 @@ ul{
     background-color: gray;
     height: 200px;
     width: 160px;
+}
+
+.playerUpdates{
+    display: block;
+    margin: auto;
+    position: relative;
+    text-align: center;
+    height: 80px;
+    width: 500px;
+    background-color:greenyellow;
+    padding: 10px; 
+    color: black;  
 }
 
 #board1wrapper{
@@ -40,7 +51,7 @@ ul{
     padding: 0px;
     margin: auto;
     position: relative;   
-    border: yellowgreen solid 10px;
+    border: greenyellow solid 10px;
 }
 
 img{
@@ -57,6 +68,7 @@ img{
     width: 50px;
     height: 50px;
     outline: grey dotted .15px;
+    background-color: rgb(22, 21, 21);
     padding: 0px;
     margin: 0px;
     font-size: 30px;
@@ -64,29 +76,27 @@ img{
 }
 
 .O{
-    background-color: rgb(22, 21, 21);  
+
 }
 
 .start{
-    background-color: rgb(133, 133, 133);
-    border-top: 10px green;
+
 }
 
 .exit{
-    background-color:  rgb(22, 21, 21); 
-   background: rgb(22, 21, 21);
+
 }
 
-.goblin{
-    background-color: rgb(22, 21, 21);
+.goblin > img{
+    visibility: hidden;
 }
 
 .shade{
-    background-color: rgb(22, 21, 21);
+
 }
 
 .treasure{
-    background-color:rgb(22, 21, 21);
+
 }
 
 #score{
